# WindowsWallpaperManager

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: static.yml
docs/: tray-plan.md
examples/configs/: config.jsonc  widgets.jsonc
src/: App.css  App.tsx  SwitchBarApp.css  SwitchBarApp.tsx  main.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-get-wallpapers.json
src-tauri/src/: bin.rs  commands.rs  lib.rs  main.rs  shortcut.rs  storage.rs  thumbnail.rs  tray.rs  window.rs
src-tauri/src/components/: mod.rs  tray.rs  window.rs
src-tauri/src/services/: commands.rs  mod.rs  shortcut.rs  storage.rs  thumbnail.rs
src-tauri/windows/: hooks.nsh
src/components/: SetupGrid.tsx  SwitchBarHeader.tsx  WallpaperCarousel.tsx  WidgetsGrid.tsx
src/hooks/: useDragScroll.ts
src/services/: hotkey.rs  mod.rs  storage.rs  thumbnail.rs  wp.rs
website/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
website/src/: App.tsx  index.css
