[package]
name = "win-wallpaper"
version = "0.1.0"
edition = "2024"
authors = ["Soli-64"]
license = "MIT"
description = "A little app for changing wallpaper easily."

[dependencies]
eframe = {version = "0.33.3", features = ["persistence"]}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
directories = "5.0"
once_cell = "1.19"
anyhow = "1.0"
rand = "0.9.2"
rfd = "0.16.0"
wallpaper = "3.2.0"
windows-sys =  { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
] }
raw-window-handle = "0.6.2"
rdev = "0.5.3"
image = { version = "0.25", features = ["png", "jpeg"] }
walkdir = "2.5"
rayon = "1.7"
dirs = "5.0"
