[package]
name = "win-wallpaper"
version = "0.2.1"
description = "A Wallpaper Manager For Windows"
authors = ["Lso"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "win_wallpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-wallpaper = "2.0.2"
dirs = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
walkdir = "2.5.0"
tauri-plugin-global-shortcut = "2"

[profile.dev]
incremental = true # Compile faster
opt-level = 0

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Better optimizations
opt-level = "s" # Optimize for binary size
lto = true # Enable Link Time Optimization
strip = true # Strip symbols from binary
